KAN-112: get plan by id
