# docs/swagger.yaml
@@ -121,6 +121,37 @@ definitions:
         example: vhkp9^,lvo0y[0bh'0dsojvp]
         type: string
     type: object
+  dto.GetPlanDetailsResponse:
+    properties:
+      created_at:
+        example: 2026-05-05 15:44:09.523069+00
+        type: string
+      id:
+        example: whatthehell
+        type: string
+      name:
+        example: what
+        type: string
+      orders:
+        items:
+          $ref: '#/definitions/dto.OrderDetails'
+        type: array
+      routes:
+        items:
+          $ref: '#/definitions/dto.RouteDetails'
+        type: array
+      tag_skills:
+        items:
+          $ref: '#/definitions/dto.TagSkillDetails'
+        type: array
+      updated_at:
+        example: 2026-05-05 15:44:09.523069+00
+        type: string
+      vehicles:
+        items:
+          $ref: '#/definitions/dto.VehicleDetails'
+        type: array
+    type: object
   dto.GroupCreateOrder:
     properties:
       orders:
@@ -179,6 +210,46 @@ definitions:
       success:
         type: boolean
     type: object
+  dto.OrderDetails:
+    properties:
+      capacity:
+        example: 77
+        type: number
+      des_latitude:
+        example: 1.992
+        type: number
+      des_longitude:
+        example: 2.991
+        type: number
+      id:
+        example: 720
+        type: integer
+      name:
+        example: red bicycle
+        type: string
+      note:
+        example: owned by P sek
+        type: string
+      priority:
+        example: 1
+        type: integer
+      service_time:
+        example: 7
+        type: integer
+      skills:
+        items:
+          $ref: '#/definitions/dto.TagSkillID'
+        type: array
+      time_window_end:
+        example: 1000
+        type: integer
+      time_window_start:
+        example: 720
+        type: integer
+      type:
+        example: 1
+        type: integer
+    type: object
   dto.RequestOTPRequest:
     properties:
       tel:
@@ -206,6 +277,58 @@ definitions:
       tel:
         example: "0999999999"
         type: string
+    type: object
+  dto.RouteDetails:
+    properties:
+      id:
+        example: 720
+        type: integer
+      stops:
+        items:
+          $ref: '#/definitions/dto.StopDetails'
+        type: array
+      total_distance:
+        example: 720
+        type: number
+      total_time:
+        example: 720
+        type: integer
+      vehicle_id:
+        example: 1314
+        type: integer
+    type: object
+  dto.StopDetails:
+    properties:
+      id:
+        example: 7
+        type: integer
+      order_id:
+        example: 720
+        type: integer
+      route_id:
+        example: 72
+        type: integer
+      sequence_number:
+        example: 77
+        type: integer
+    type: object
+  dto.TagSkillDetails:
+    properties:
+      color:
+        example: red
+        type: string
+      id:
+        example: 1314
+        type: integer
+      name:
+        example: driver must meet buety standard
+        type: string
+    type: object
+  dto.TagSkillID:
+    properties:
+      id:
+        example: 1314
+        type: integer
     type: object
   dto.UpdateOrder:
     properties:
@@ -287,6 +410,58 @@ definitions:
           $ref: '#/definitions/dto.VehicleTagSkill'
         type: array
     type: object
+  dto.VehicleDetails:
+    properties:
+      capacity:
+        example: 1000
+        type: number
+      daily_break_time_end:
+        example: 780
+        type: integer
+      daily_break_time_start:
+        example: 720
+        type: integer
+      daily_work_time_end:
+        example: 960
+        type: integer
+      daily_work_time_start:
+        example: 480
+        type: integer
+      end_latitude:
+        example: 1.3288
+        type: number
+      end_longitude:
+        example: 8.8231
+        type: number
+      id:
+        example: 1314
+        type: integer
+      max_task:
+        example: 20
+        type: integer
+      model:
+        example: Malah model Y
+        type: string
+      name:
+        example: รถคันนี้สีแดง
+        type: string
+      number_plate:
+        example: สกร2019
+        type: string
+      profile_id:
+        example: 1
+        type: integer
+      skills:
+        items:
+          $ref: '#/definitions/dto.TagSkillID'
+        type: array
+      start_latitude:
+        example: 1.3288
+        type: number
+      start_longitude:
+        example: 8.8231
+        type: number
+    type: object
   dto.VehicleTagSkill:
     properties:
       color:
@@ -317,14 +492,6 @@ definitions:
       status:
         example: success
         type: string
-    type: object
-  gorm.DeletedAt:
-    properties:
-      time:
-        type: string
-      valid:
-        description: Valid is true if Time is not NULL
-        type: boolean
     type: object
   handlers.CreateResponse:
     properties:
@@ -413,25 +580,18 @@ definitions:
         $ref: '#/definitions/models.Company'
       companyID:
         type: string
-      createdAt:
-        type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
       email:
         type: string
       google_id:
         type: string
-      id:
-        type: integer
       is_need_on_boarding:
         type: boolean
       is_validated:
         type: boolean
       name:
+        description: gorm.Model
         type: string
       tel:
-        type: string
-      updatedAt:
         type: string
     type: object
   response.BuildMatrixResponse:
@@ -440,6 +600,8 @@ definitions:
         type: string
       node:
         type: integer
+      provider:
+        type: string
       result:
         $ref: '#/definitions/response.MatrixResponse'
     type: object
@@ -1014,6 +1176,43 @@ paths:
       security:
       - BearerAuth: []
       summary: DuplicatePlan and its legacy by id
+      tags:
+      - plan
+  /api/plans/{id}:
+    get:
+      consumes:
+      - application/json
+      description: user has to be in the same company as target plan to be allowed
+        to get it
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Plan ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.GetPlanDetailsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: get Plan and its legacy by id
       tags:
       - plan
   /api/skills:
